<?xml version="1.0"?>
<package>
  <name>link_states_listener</name>
  <version>0.0.0</version>
  <description>The link_states_listener package</description>

  <maintainer email="park_hyeonwoo@todo.todo">park_hyeonwoo</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  

  </export>
</package>
